fixed no scroll when the assignment list overflows

--- a/front-end/Savash/src/Class.css
+++ b/front-end/Savash/src/Class.css
@@ -11,7 +11,9 @@
 }
 
 .people-list{
-    color: var(--textColor)
+    color: var(--textColor);
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .person-row{
