--- a/front-end/Savash/src/components/AssignmentList.css
+++ b/front-end/Savash/src/components/AssignmentList.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     position: relative;
     height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .assignment-list .row{
